[package]
name = "guise"
version = "0.1.0"
edition = "2021"

authors = ["yanchith <yanchi.toth@gmail.com>"]
keywords = ["gui", "graphics"]
categories = ["gui", "imgui", "portable"]
description = "A winit & wgpu example for guise"
readme = "README.md"
repository = "https://github.com/virtual-sunset/guise"
license = "MIT"

[features]
font_ibm_plex_mono = []
font_ibm_plex_sans_jp = []
font_proggy_clean = []
font_roboto = []
font_liberation_mono = []
default = []

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
bytemuck = { version = "1.7.3", features = ["derive"] }
fontdue = "0.5.2"
hashbrown = { version = "0.12.0", features = ["nightly"] }
libm = "0.2.2"
log = { version = "0.4.14", optional = true }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
