[package]
name = "guise_example_winit_wgpu"
version = "0.1.0"
edition = "2021"

authors = ["yanchith <yanchi.toth@gmail.com>"]
keywords = ["gui", "graphics"]
categories = ["gui", "imgui", "portable"]
description = "A winit & wgpu example for guise"
readme = "README.md"
repository = "https://github.com/virtual-sunset/guise"
license = "MIT"

[dependencies]
arrayvec = "0.7.2"
bytemuck = { version = "1.7.3", features = ["derive"] }
guise = { path = "../guise", features = ["log", "font_proggy_clean", "font_roboto", "font_ibm_plex_mono"] }
log = "0.4.14"
pollster = "0.2.5"
pretty_env_logger = "0.4.0"
raw-window-handle = "0.4.2"
vk-shader-macros = "0.2.7"
wgpu = { version = "0.12.0", features = ["spirv"] }
winit = "0.26.1"
