[package]
name = "guise_example_winit_wgpu"
version = "0.1.0"
edition = "2021"

authors = ["yanchith <yanchi.toth@gmail.com>"]
keywords = ["gui", "graphics"]
categories = ["gui", "imgui", "portable"]
description = "A winit & wgpu example for guise"
readme = "README.md"
repository = "https://github.com/virtual-sunset/guise"
license = "MIT"

[dependencies]
arrayvec = "0.7.2"
bytemuck = { version = "1.13.1", features = ["derive"] }
copypasta = "0.8.2"
guise = { path = "../guise", features = ["log", "font_proggy_clean", "font_roboto", "font_ibm_plex_mono", "font_ibm_plex_sans_jp", "font_liberation_mono"] }
log = "0.4.17"
pollster = "0.3.0"
pretty_env_logger = "0.4.0"
raw-window-handle = "0.5.2"
wgpu = "0.16.0"
winit = "0.28.5"
